# CS-EBOT-API

./: CMakeLists.txt  README.md  ebot_api.filters  ebot_api.inc  ebot_api.sln  ebot_api.vcxproj
sdk/: amxxmodule.cpp  moduleconfig.h
source/: base.cpp  ebot_api.rc  main.cpp  main.h
